[package]
name = "lsend"
version = "0.1.1"
edition = "2024"
description = "Simple tool to securely share a file over your local network"
authors = ["Logan-010"]

[dependencies]
anyhow = "1.0.98"
blake3 = { version = "1.8.2", features = ["serde", "mmap", "rayon"] }
chacha20poly1305 = { version = "0.10.1", features = ["std", "stream"] }
clap = { version = "4.5.41", features = ["derive"] }
flate2 = "1.1.2"
hex = "0.4.3"
local-ip-address = "0.6.5"
mdns-sd = "0.13.11"
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
incremental = false
debug = false
